resolved a leftover error

--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -52,8 +52,10 @@
 
         if(_stepper.GetActiveIndex() == 0)
         {
-            
+
         }
+
+        return true;
     }
 
     private async Task AddAllEntrants()
