--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -81,6 +81,12 @@
             <MudTabPanel Text="Engines">
                 <SeasonEngines />
             </MudTabPanel>
+            @if (Season.State == State.Active)
+            {
+                <MudTabPanel Text="Development">
+                    <Development />
+                </MudTabPanel>
+            }
             <MudTabPanel Text="Settings" BadgeData='"!"' BadgeColor="Color.Error">
                 <MudGrid>
                     <MudItem xs="12">
